# aida-challenge

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  CHANGES.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  test_app.py
dbt_project/: .user.yml  README.md  dbt_project.yml  profiles.yaml  profiles.yml  profiles.yml.example
dbt_project/logs/: .gitkeep
dbt_project/models/: schema.yml
dbt_project/models/marts/: _marts.yml  dim_customers.sql  fact_policies.sql  mart_competitor_analysis.sql
dbt_project/models/staging/: _sources.yml  _staging.yml  stg_abitazioni.sql  stg_clienti.sql  stg_competitor_prodotti.sql  stg_interazioni_clienti.sql  stg_polizze.sql  stg_reclami.sql  stg_sinistri.sql
docs/: ai_challenge_context.md  data_schema.md  dbt_profiles_guide.md
notebooks/exploratory/: 00_data_loading.ipynb  01_data_exploration.ipynb  02_data_visualization.ipynb
src/aida_challenge/: data_loader.py  db_explorer.py  dbt_commands.py
streamlit_app/: README.md  app.py  data_loader.py
