[project]
name = "aida-challenge"
version = "0.1.0"
description = "AIDA Challenge Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "duckdb>=1.4.3",
    "dbt-duckdb>=1.10.0",
]

[project.optional-dependencies]
analysis = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "scikit-learn>=1.4.0",
]

ai = [
]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aida_challenge"]

[tool.uv]
dev-dependencies = []

[tool.uv.scripts]
# dbt commands
dbt-debug = "dbt debug --project-dir dbt_project --profiles-dir dbt_project --no-use-colors"
dbt-deps = "dbt deps --project-dir dbt_project --profiles-dir dbt_project --no-use-colors"
dbt-run = "dbt run --project-dir dbt_project --profiles-dir dbt_project --no-use-colors"
dbt-test = "dbt test --project-dir dbt_project --profiles-dir dbt_project --no-use-colors"
dbt-build = "dbt build --project-dir dbt_project --profiles-dir dbt_project --no-use-colors"
dbt-docs-generate = "dbt docs generate --project-dir dbt_project --profiles-dir dbt_project --no-use-colors"
dbt-docs-serve = "dbt docs serve --project-dir dbt_project --profiles-dir dbt_project --no-use-colors"
dbt-clean = "dbt clean --project-dir dbt_project --profiles-dir dbt_project --no-use-colors"

# dbt model-specific commands
dbt-run-staging = "dbt run --select staging --project-dir dbt_project --profiles-dir dbt_project --no-use-colors"
dbt-run-intermediate = "dbt run --select intermediate --project-dir dbt_project --profiles-dir dbt_project --no-use-colors"
dbt-run-marts = "dbt run --select marts --project-dir dbt_project --profiles-dir dbt_project --no-use-colors"
dbt-test-sources = "dbt test --select source:* --project-dir dbt_project --profiles-dir dbt_project --no-use-colors"

# Combined workflows
dbt-full-refresh = { cmd = "dbt run --full-refresh --project-dir dbt_project --profiles-dir dbt_project --no-use-colors && dbt test --project-dir dbt_project --profiles-dir dbt_project --no-use-colors" }
dbt-setup = { cmd = "dbt debug --project-dir dbt_project --profiles-dir dbt_project --no-use-colors && dbt deps --project-dir dbt_project --profiles-dir dbt_project --no-use-colors" }

[tool.ruff]
line-length = 100
target-version = "py312"
# Ignore line-too-long errors
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
