[project]
name = "aida-challenge"
version = "0.1.0"
description = "AIDA Challenge Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "duckdb>=1.4.3",
    "dbt-duckdb>=1.10.0",
]

[project.optional-dependencies]
analysis = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "scikit-learn>=1.4.0",
]

ai = [
]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "sqlfluff>=3.0.0",
    "sqlfluff-templater-dbt>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aida_challenge"]

[project.scripts]
load-raw-data = "aida_challenge.data_loader:load_raw_data"
explore-db = "aida_challenge.db_explorer:explore_db"
dbt-debug = "aida_challenge.dbt_commands:dbt_debug"
dbt-deps = "aida_challenge.dbt_commands:dbt_deps"
dbt-run = "aida_challenge.dbt_commands:dbt_run"
dbt-test = "aida_challenge.dbt_commands:dbt_test"
dbt-build = "aida_challenge.dbt_commands:dbt_build"
dbt-clean = "aida_challenge.dbt_commands:dbt_clean"
dbt-docs-generate = "aida_challenge.dbt_commands:dbt_docs_generate"
dbt-docs-serve = "aida_challenge.dbt_commands:dbt_docs_serve"

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py312"
# Ignore line-too-long errors
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.sqlfluff.core]
dialect = "duckdb"
templater = "dbt"
max_line_length = 120

[tool.sqlfluff.templater.dbt]
project_dir = "dbt_project"
profiles_dir = "dbt_project"
profile = "aida_insurance"
target = "dev"

[tool.sqlfluff.indentation]
indent_unit = "space"
tab_space_size = 4
